--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div id="game"></div>
 <script src="Lib/pixi.js"></script>
 <script src="Lib/howler.js"></script>
+<script src="math.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
