--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="explain">
 <h1>You need a hug!</h1>
 <small>A Game by Markus "TiByte" Becker and Malloth Rha</small>
-<p id="goal">You are a monster and you need a hug! #TODO:add more explaination</p></div>
+<p id="goal">You are a monster and you need a hug!<img src="Images/creatures/pickyLady.png" alt="" id="old"></p></div>
 <div id="game"></div>
 <script src="Lib/pixi.js"></script>
 <script src="Lib/howler.js"></script>
