--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div id="explain">
 <h1>You need a hug!</h1>
-<small>A Game by Markus "TiByte" Becker and Malloth Rha</small>
-<p id="goal">You are a monster and you need a hug!<img src="Images/creatures/pickyLady.png" alt="" id="old"></p></div>
+<small>Info: <a href="info.html">here</a></small>
+<p id="goal"><img src="Images/creatures/badCop.png" alt="" id="old">You are a monster and you need a hug!<img src="Images/creatures/pickyLady.png" alt="" id="old"></p></div>
 <div id="game"></div>
 <script src="Lib/pixi.js"></script>
 <script src="Lib/howler.js"></script>
