--- a/info.html
+++ b/info.html
@@ -9,7 +9,8 @@
 <body>
 <div id="explain">
 <h1>You need a hug! - INFO</h1>
-<small>Game: <a href="./index.html">here</a></small>
+<small>Game: <a href="./index.html">here</a><br>
+Download SRC: <a href="./Download/ynah_003.zip">ynah_003.zip</a></small>
 <p id="goal"><table border="1" cellpadding="5px">
     <tr>
         <th>Person</th>
