Game finished (LD-Version: 004_33)

--- a/info.html
+++ b/info.html
@@ -10,14 +10,17 @@
 <div id="explain">
 <h1>You need a hug! - INFO</h1>
 <small>Game: <a href="./index.html">here</a><br>
-Download SRC: <a href="./Download/ynah_003.zip">ynah_003.zip</a></small>
-<p id="goal"><table border="1" cellpadding="5px">
+Download SRC: <a href="./Download/ynah_003.zip">ynah_003.zip</a><br>
+&nbsp;&nbsp;Download #LD33 SRC: <a href="./Download/ynah_004.zip">ynah_004.zip</a> (LD#33)<br></small>
+<p id="goal">
+<table id="holder" cellpadding="10px">
+<tr><td><table border="1" cellpadding="5px" id="creators">
     <tr>
         <th>Person</th>
         <th>"Fine-Art"</th>
     </tr>
     <tr>
-        <td><a href="mailto:info@tibyte.net">Markus "TiByte" Becker</a></td>
+        <td><a href="mailto:info@tibyte.net?subject=LudumDare33" "Contact">Markus "TiByte" Becker</a></td>
         <td>Code, Graphics</td>
     </tr>
     <tr>
@@ -25,7 +28,7 @@ Download SRC: <a href="./Download/ynah_003.zip">ynah_003.zip</a></small>
         <td>Music, Graphics</td>
     </tr>
 </table><br><br>
-<table border="1" cellpadding="5px">
+<table border="1" cellpadding="5px" id="tools">
     <tr>
         <th>Library/Tool</th>
         <th>Used for</th>
@@ -52,6 +55,11 @@ Download SRC: <a href="./Download/ynah_003.zip">ynah_003.zip</a></small>
         <td>Markus: 3-4 Years, Malloth: 1 Year</td>
     </tr>
     <tr>
+        <td>SFXR</td>
+        <td>for sounds</td>
+        <td>Markus: 3 LDs</td>
+    </tr>
+    <tr>
         <td>Sublime Text 3</td>
         <td>Texteditor</td>
         <td>Markus: 1 Year, Malloth: 1 Week</td>
@@ -61,6 +69,49 @@ Download SRC: <a href="./Download/ynah_003.zip">ynah_003.zip</a></small>
         <td>Awesome Plugins</td>
         <td>Markus: 1 Year, Malloth: 1 Week</td>
     </tr>
-</table></p></div>
+</table><br><br></td><td>
+<table border="1" cellpadding="5px" id="art">
+    <tr>
+        <th>"ART"</th>
+        <th>Picture</th>
+    </tr>
+    <tr>
+        <td><a href="Ideas/top1.png">Mindstorm_1</a><br><a href="Ideas/top2.png">Mindstorm_2</a><br><a href="Ideas/top3.png">Mindstorm_3</a><br><a href="Ideas/top4.png">Mindstorm_4</a></td>
+        <td><img src="Ideas/top3.png" alt="" class="small"></td>
+    </tr>
+    <tr>
+        <td><a href="Images/Backgrounds/BackgroundPics/easy.png">Easy_BG</a><br><a href="Images/Backgrounds/BackgroundPics/normal.png">Normal_BG</a><br><a href="Images/Backgrounds/BackgroundPics/hard.png">Hard_BG</a></td>
+        <td><img src="Images/Backgrounds/BackgroundPics/hard.png" alt="" class="small"></td>
+    </tr>
+    <tr>
+        <td><a href="Web/favicon512.png">Full Size Favicon</a></td>
+        <td><img src="Web/favicon512.png" alt="" class="small"></td>
+    </tr>
+    <tr>
+        <td><a href="Images/creatures/badCop.png">Character: "Bad Cop"</a></td>
+        <td><img src="Images/creatures/badCop.png" alt="" class="small"></td>
+    </tr>
+    <tr>
+        <td><a href="Images/creatures/dumbChild.png">Character: "Dumb Child"</a></td>
+        <td><img src="Images/creatures/dumbChild.png" alt="" class="small"></td>
+    </tr>
+    <tr>
+        <td><a href="Images/creatures/pickyLady.png">Character: "Picky Lady"</a></td>
+        <td><img src="Images/creatures/pickyLady.png" alt="" class="small"></td>
+    </tr>
+    <tr>
+        <td><a href="Images/creatures/weirdMonster.png">Character: "Weird Monster"</a></td>
+        <td><img src="Images/creatures/weirdMonster.png" alt="" class="small"></td>
+    </tr>
+    <tr>
+        <td><a href="Music/">Music</a></td>
+        <td>Music Folder (HTTP)</td>
+    </tr>
+    <tr>
+        <td><a href="Sounds/">Sounds</a></td>
+        <td>Sound Folder (HTTP)</td>
+    </tr>
+</table></td></tr></table>
+</p></div>
 </body>
 </html>
