--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>You need a hug! - #LD33</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon"
+          type="image/png"
+          href="Web/favicon64.png">
 </head>
 <body>
 <div id="explain">
 <h1>You need a hug!</h1>
 <small>Info: <a href="info.html">here</a></small>
-<p id="goal"><img src="Images/creatures/badCop.png" alt="" id="old">You are a monster and you need a hug!<img src="Images/creatures/pickyLady.png" alt="" id="old"></p></div>
+<p id="goal"><img src="Images/creatures/weirdMonster.png" alt="" class="small"><img src="Images/creatures/badCop.png" alt=""  class="small">You are a monster and you need a hug!<img src="Images/creatures/pickyLady.png" alt=""  class="small"><img src="Images/creatures/dumbChild.png" alt="" class="small"></p></div>
 <div id="game"></div>
 <script src="Lib/pixi.js"></script>
 <script src="Lib/howler.js"></script>
